# EvoSys

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/evosys/: __init__.py  bootstrap.py  cli.py  config.py  loop.py  mcp_server.py  server.py
src/evosys/agents/: __init__.py  agent.py  extraction_agent.py  sub_agent.py
src/evosys/channels/: __init__.py  cli_chat.py  webhook.py
src/evosys/channels/slack/: bot.py  formatting.py  threading.py
src/evosys/channels/web/: frames.py  streaming_agent.py  ws_handler.py
src/evosys/channels/web/static/: chat.html
src/evosys/core/: __init__.py  interfaces.py  tool.py  types.py
src/evosys/dashboard/: __init__.py
src/evosys/executors/: __init__.py  browser_profiles.py  http_executor.py  skill_executor.py
src/evosys/forge/: __init__.py  composite_forge.py  failure_tracker.py  forge.py  reforger.py  synthesizer.py
src/evosys/ingest/: claude_code_ingest.py
src/evosys/llm/: __init__.py  client.py  embeddings.py  health.py  local_probe.py  router.py  tier_strategy.py
src/evosys/orchestration/: __init__.py  extraction_orchestrator.py  routing_orchestrator.py
src/evosys/reflection/: __init__.py  daemon.py  pattern_detector.py  semantic_detector.py  sequence_detector.py  shadow_evaluator.py  strategy_extractor.py
src/evosys/schemas/: __init__.py  _types.py  skill.py  slice.py  trajectory.py
src/evosys/security/: auth.py  token.py
src/evosys/skills/: __init__.py  library.py  loader.py  manifest.py  marketplace.py  registry.py
src/evosys/storage/: __init__.py  embedding_models.py  embedding_store.py  engine.py  memory_store.py  models.py  schedule_store.py  skill_store.py  trajectory_store.py
src/evosys/tools/: __init__.py  builtins.py  external_agent.py  mcp.py  registry.py  skill_adapter.py  sub_agent_tool.py
src/evosys/trajectory/: __init__.py  logger.py  sanitizer.py
tests/: conftest.py  test_bootstrap.py  test_branching_composite.py  test_cli.py  test_continuous_shadow.py  test_external_agent.py  test_forge_failure_tracker.py  test_ingest.py  test_integration.py  test_loop.py  test_loop_sequences.py  test_mcp_server.py  test_semantic_detector.py  test_server.py  test_strategy_extractor.py
tests/test_agents/: test_agent.py  test_extraction_agent.py  test_sub_agent.py
tests/test_channels/: test_cli_chat.py  test_slack_bot.py  test_webhook.py  test_ws_handler.py
tests/test_core/: test_interfaces.py  test_types.py
tests/test_executors/: test_browser_profiles.py  test_http_executor.py  test_skill_executor.py
tests/test_forge/: test_composite_forge.py  test_forge.py  test_reforger.py  test_synthesizer.py
tests/test_llm/: test_client.py  test_local_probe.py  test_router.py  test_tool_calling.py
tests/test_orchestration/: test_extraction_orchestrator.py  test_routing_orchestrator.py
tests/test_reflection/: test_daemon.py  test_pattern_detector.py  test_sequence_detector.py  test_shadow_evaluator.py
tests/test_schemas/: test_skill.py  test_slice.py  test_trajectory.py
tests/test_security/: test_auth.py
tests/test_skills/: test_library.py  test_loader.py  test_registry.py
tests/test_storage/: test_embedding_store.py  test_engine.py  test_memory_store.py  test_models.py  test_schedule_store.py  test_skill_persistence.py  test_skill_store.py  test_tool_trajectories.py  test_trajectory_queries.py  test_trajectory_store.py
tests/test_tools/: test_action_tools.py  test_builtins.py  test_mcp.py  test_registry.py  test_scheduling.py  test_skill_adapter.py  test_tool_protocol.py  test_types.py
tests/test_trajectory/: test_logger.py  test_sanitizer.py
thoughts/: 001-skill-taxonomy.md  002-skill-maturation-pipeline.md  003-bootstrapping-problem.md  004-what-can-we-solve-now.md  005-self-practice.md  006-reality-check.md  007-first-concrete-task.md  008-everyday-user-pain-points.md  009-implementation-review.md  010-stretch-goals.md  011-blog-update.md  012-gap-analysis-vs-openclaw.md  013-concrete-roadmap.md  README.md
