[project]
name = "evosys"
version = "0.1.0"
description = "A self-evolving autonomous agent ecosystem"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Schemas & serialization
    "pydantic>=2.0",
    "orjson>=3.9",
    "msgpack>=1.0",
    "python-ulid>=2.0",

    # Async & networking
    "anyio>=4.0",
    "httpx>=0.27",

    # Structured logging
    "structlog>=24.0",

    # Graph & DAG
    "networkx>=3.0",

    # Retry & scheduling
    "tenacity>=8.0",
    "apscheduler>=3.10",

    # LLM providers
    "litellm>=1.40",
    "anthropic>=0.30",
    "openai>=1.30",
    "tiktoken>=0.7",

    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "aiosqlite>=0.20",

    # Vector DB
    "lancedb>=0.6",

    # ML / embeddings
    "torch>=2.2",
    "sentence-transformers>=3.0",

    # Web / dashboard
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",

    # Sandbox
    "docker>=7.0",

    # CLI
    "typer>=0.12",
    "rich>=13.0",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
    "pyright>=1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
reflection = [
    "scikit-learn>=1.4",
    "hdbscan>=0.8",
    "scipy>=1.12",
]
training = [
    "transformers>=4.40",
    "peft>=0.11",
    "datasets>=2.19",
    "trl>=0.8",
    "llama-cpp-python>=0.2",
]
nlp = [
    "spacy>=3.7",
    "regex>=2024.0",
    "lxml>=5.0",
    "python-dateutil>=2.9",
    "ftfy>=6.0",
]
forge = [
    "RestrictedPython>=7.0",
    "jsonschema>=4.22",
    "genson>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evosys"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.pyright]
pythonVersion = "3.12"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
